# World-Anvil-MCP

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CI_CD_QUICK_REFERENCE.txt  CI_CD_SETUP_CHECKLIST.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  SETUP_QUICK_START.md  WORKFLOW_REFERENCE.md  openapi.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: checkpoint_day1_complete.md  checkpoint_day2_complete.md  checkpoint_day2_integration_complete.md  checkpoint_day3_4_complete.md  code_style_conventions.md  codebase_structure.md  design_phase_complete.md  markdown_to_rst_automation.md  phase_0.3_complete.md  phase_0.4_complete.md  phase_0.4_documentation_complete.md  phase_0_complete.md  phase_0_retrospective_complete.md  phase_1_1_plan_integrated.md  phase_1_1_plan_revised.md  phase_1_1_plan_spec_compliant.md  phase_1_1_ready.md  project_overview.md  suggested_commands.md  task_completion_protocol.md  test_suite_resolution.md  world_anvil_api_notes.md
.serena/memories/project/: decisions_finalized.md  phase_0.1_complete.md  plan_complete.md
claudedocs/: API_COVERAGE.md  DESIGN_SPECIFICATION.md  SETUP_SCRIPTS_CHECKLIST.md  WORKFLOWS.md  WORLD_ANVIL_RESEARCH.md  setup-scripts-implementation.md
docs/: CI_CD_PIPELINE.md  DEVELOPMENT_QUICK_START.md  PHASE_0_STATUS.md  PROJECT_PLAN.md  SETUP.md
docs/decisions/: ADR-001-api-client-strategy.md  ADR-002-license-compatibility.md
docs/pdca/: README.md
docs/pdca/_template/: act.md  check.md  do.md  plan.md
docs/pdca/phase-0-retrospective/: check.md
docs/pdca/phase-1.1-foundation/: act.md  check.md  do.md  plan-revised-withfeedback.md  plan.md
docs/quality/: api-client-patterns.md  code-quality-rules.md  documentation-standards.md  testing-requirements.md
docs/research/: pywaclient-analysis.md
docs/source/: DOCUMENTATION_WORKFLOW.rst  conf.py  index.rst  installation.rst  overview.rst  quickstart.rst
docs/source/api/: index.rst
docs/source/api/_autosummary/: world_anvil_mcp.cache.ResponseCache.rst  world_anvil_mcp.endpoints.ArticleEndpoint.rst  world_anvil_mcp.endpoints.CampaignEndpoint.rst  world_anvil_mcp.endpoints.CategoryEndpoint.rst  world_anvil_mcp.endpoints.MapEndpoint.rst  world_anvil_mcp.endpoints.WorldEndpoint.rst  world_anvil_mcp.exceptions.rst  world_anvil_mcp.models.Article.rst  world_anvil_mcp.models.Campaign.rst  world_anvil_mcp.models.Category.rst  world_anvil_mcp.models.Map.rst  world_anvil_mcp.models.World.rst  world_anvil_mcp.rate_limiter.RateLimiter.rst
docs/source/architecture/: index.rst
docs/source/development/: index.rst
docs/specs/: CONTEXT-ENGINE-SPEC.md  MCP-ECOSYSTEM-SPEC.md  client-architecture.md  tool-specifications.md
docs/workflows/: README.md  content-search.md  d-and-d-campaign-setup.md  location-development.md  map-management.md  npc-generation.md  quest-plot-management.md  quick-npc-lookup.md  session-note-taking.md  session-prep.md  world-anvil-platform-summary.md  world-building.md
scripts/: README.md  dev-setup.ps1  dev-setup.sh  md_to_rst.py  run_live_tests.sh  test_live_api.py
src/world_anvil_mcp/: __init__.py  cache.py  client.py  exceptions.py  py.typed  server.py
src/world_anvil_mcp/api/: __init__.py
src/world_anvil_mcp/ecosystem/: __init__.py  detector.py
src/world_anvil_mcp/models/: __init__.py  user.py  world.py
src/world_anvil_mcp/tools/: __init__.py  user.py  world.py
tests/: __init__.py  conftest.py  test_cache.py  test_ecosystem.py  test_example.py  test_exceptions.py  test_models.py
tests/endpoints/: conftest.py
tests/integration/: test_client.py  test_server.py  test_tools.py
tests/models/: test_integration.py  test_user.py  test_world.py
